fix for webkit that need ::scrollbar wrapped into html or body

--- a/assets/src/scss/main/scrollbar.scss
+++ b/assets/src/scss/main/scrollbar.scss
@@ -1,43 +1,46 @@
-::-webkit-scrollbar {
-  position: relative;
-  z-index: 100000;
-  width: 12px;
-  height: 12px;
-  @media #{$mq__tablet-portrait}{
-    width: 6px;
+html {
+  ::-webkit-scrollbar {
+    position: relative;
+    z-index: 100000;
+    width: 12px;
+    height: 12px;
+    @media #{$mq__tablet-portrait}{
+      width: 6px;
+    }
   }
-}
-
-::-webkit-scrollbar-track {
-  border-radius: 0px;
-}
-
-::-webkit-scrollbar-track-piece,
-::-webkit-scrollbar-track {
-  background-color: $scrollbar-background-color;
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-}
-
-::-webkit-scrollbar-thumb:vertical,
-::-webkit-scrollbar-thumb:horizontal {
-  background-color: $scrollbar-line-color;
-  border-radius: 1px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.15);
-}
-
-::-webkit-scrollbar-button:start:decrement,
-::-webkit-scrollbar-button:end:increment {
-  height: 0;
-  width: 0;
-  display: block;
-  background-color: $scrollbar-background-color;
-}
-
-::-webkit-scrollbar-button {
-  width: 0;
-  height: 0;
-}
-
-::-webkit-scrollbar-corner {
-  background-color: lighten($scrollbar-background-color, 10%);
+  
+  ::-webkit-scrollbar-track {
+    border-radius: 0px;
+  }
+  
+  ::-webkit-scrollbar-track-piece,
+  ::-webkit-scrollbar-track {
+    background-color: $scrollbar-background-color;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  }
+  
+  ::-webkit-scrollbar-thumb,
+  ::-webkit-scrollbar-thumb:vertical,
+  ::-webkit-scrollbar-thumb:horizontal {
+    background-color: $scrollbar-line-color;
+    border-radius: 1px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.15);
+  }
+  
+  ::-webkit-scrollbar-button:start:decrement,
+  ::-webkit-scrollbar-button:end:increment {
+    height: 0;
+    width: 0;
+    display: block;
+    background-color: $scrollbar-background-color;
+  }
+  
+  ::-webkit-scrollbar-button {
+    width: 0;
+    height: 0;
+  }
+  
+  ::-webkit-scrollbar-corner {
+    background-color: lighten($scrollbar-background-color, 10%);
+  }
 }
